--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,8 @@ h2{
 #info{
     font-family: 'Press Start 2P', cursive;
     color:white;
-    font-size: 14px;
+    font-size: 15px;
+    line-height:17px;
     text-align:center;
 
 }
